Update Service unit tests