@@ -6,15 +6,20 @@ import static org.mockito.Mockito.when;
 import com.shoxys.budgetbuddy_backend.DTOs.Dashboard.*;
 import com.shoxys.budgetbuddy_backend.Entities.Account;
 import com.shoxys.budgetbuddy_backend.Entities.SavingGoal;
+import com.shoxys.budgetbuddy_backend.Entities.Transaction;
 import com.shoxys.budgetbuddy_backend.Repo.AccountRepo;
 import com.shoxys.budgetbuddy_backend.Repo.SavingGoalsRepo;
 import com.shoxys.budgetbuddy_backend.Repo.TransactionRepo;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.Year;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.IntStream;
+
+import com.shoxys.budgetbuddy_backend.Repo.UserRepo;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,6 +32,9 @@ class DashboardServiceTest {
   @Mock private AccountRepo accountRepo;
   @Mock private SavingGoalsRepo savingGoalsRepo;
   @Mock private TransactionRepo transactionRepo;
+  @Mock private UserRepo userRepo;
+  @Mock private TransactionService transactionService;
+  @Mock private AiInsightService aiInsightService;
 
   @InjectMocks private DashboardService dashboardService;
 
@@ -38,6 +46,7 @@ class DashboardServiceTest {
 
   @BeforeEach
   void setup() {
+    mockAccount.setId(1L);
     mockAccount.setName("Main");
     mockAccount.setBalance(BigDecimal.valueOf(1000));
     mockGoal.setTitle("Save for Car");
@@ -54,25 +63,27 @@ class DashboardServiceTest {
   @Test
   void getAccountSummary_shouldMapCorrectly() {
     mockAccount.setType(null);
-    when(accountRepo.findAccountsTypeNameBalanceByUser_Id(userId))
+    when(accountRepo.findAccountsTypeNameBalanceByUserId(userId))
         .thenReturn(Collections.singletonList(mockAccount));
     List<AccountSummary> summaries = dashboardService.getAccountSummary(userId);
 
     assertEquals(1, summaries.size());
-    assertEquals(mockAccount.getName(), summaries.get(0).getName());
-    assertEquals(mockAccount.getBalance(), summaries.get(0).getBalance());
+    assertEquals(mockAccount.getName(), summaries.getFirst().getName());
+    assertEquals(mockAccount.getBalance(), summaries.getFirst().getBalance());
   }
 
   @Test
   void getNetworthResponse_shouldMapCorrectly() {
-    when(accountRepo.findAccountsNameBalanceByUser_Id(userId))
-        .thenReturn(Collections.singletonList(mockAccount));
-    when(accountRepo.findTotalBalanceByUserId(userId)).thenReturn(totalBalance);
+    when(dashboardService.getTotalBalance(userId)).thenReturn(mockAccount.getBalance());
+
+    when(accountRepo.findAccountsNameBalanceByUserId(userId))
+            .thenReturn(Collections.singletonList(mockAccount));
 
     NetworthResponse response = dashboardService.getNetworthResponse(userId);
-    assertEquals(totalBalance, response.getTotal());
-    assertEquals(mockAccount.getName(), response.getBreakdownItems().get(0).getName());
-    assertEquals(mockAccount.getBalance(), response.getBreakdownItems().get(0).getValue());
+
+    assertEquals(mockAccount.getBalance(), response.getTotal(), "Total should match the account balance");
+    assertEquals(mockAccount.getName(), response.getBreakdownItems().getFirst().getName(), "Breakdown item name should match");
+    assertEquals(mockAccount.getBalance(), response.getBreakdownItems().getFirst().getValue(), "Breakdown item value should match");
   }
 
   @Test
@@ -82,9 +93,9 @@ class DashboardServiceTest {
     List<SavingGoalSummary> summaries = dashboardService.getSavingGoalSummary(userId);
 
     assertEquals(1, summaries.size());
-    assertEquals(mockGoal.getTitle(), summaries.get(0).getTitle());
-    assertEquals(mockGoal.getContributed(), summaries.get(0).getContributed());
-    assertEquals(mockGoal.getTarget(), summaries.get(0).getTarget());
+    assertEquals(mockGoal.getTitle(), summaries.getFirst().getTitle());
+    assertEquals(mockGoal.getContributed(), summaries.getFirst().getContributed());
+    assertEquals(mockGoal.getTarget(), summaries.getFirst().getTarget());
   }
 
   @Test
@@ -117,7 +128,7 @@ class DashboardServiceTest {
     mockAnalysis.setLabel("Food");
     mockAnalysis.setValue(BigDecimal.valueOf(500));
 
-    when(transactionRepo.findTop5CategoriesByAmount(userId))
+    when(transactionRepo.findTop5ExpenseCategoriesByAmount(userId))
         .thenReturn(Collections.singletonList(mockAnalysis));
 
     List<ExpenseAnalysis> result = dashboardService.getExpenseAnalysis(userId);
@@ -141,36 +152,74 @@ class DashboardServiceTest {
 
   @Test
   void getIncomeTrend_shouldReturnIncomeTrendForCurrentAndLastYear() {
+    // Arrange
     int currentYear = Year.now().getValue();
     int lastYear = currentYear - 1;
 
-    List<BigDecimal> thisYearIncome = Collections.nCopies(12, BigDecimal.TEN);
-    List<BigDecimal> lastYearIncome = Collections.nCopies(12, BigDecimal.ONE);
-    List<String> months =
-        Arrays.asList(
-            "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec");
+    List<String> months = Arrays.asList("Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec");
+    List<Object[]> thisYearIncome = IntStream.rangeClosed(1, 12)
+            .mapToObj(i -> new Object[]{i, BigDecimal.valueOf(100.00 + (i - 1) * 100.00).setScale(2, RoundingMode.HALF_UP)})
+            .toList();
+    List<Object[]> lastYearIncome = IntStream.rangeClosed(1, 12)
+            .mapToObj(i -> new Object[]{i, BigDecimal.valueOf(50.00 + (i - 1) * 100.00).setScale(2, RoundingMode.HALF_UP)})
+            .toList();
+
+    // Expected BigDecimal lists for assertions
+    List<BigDecimal> expectedThisYearIncome = thisYearIncome.stream()
+            .map(row -> (BigDecimal) row[1])
+            .toList();
+    List<BigDecimal> expectedLastYearIncome = lastYearIncome.stream()
+            .map(row -> (BigDecimal) row[1])
+            .toList();
 
     when(transactionRepo.getMonthlyIncomeForYear(userId, currentYear)).thenReturn(thisYearIncome);
     when(transactionRepo.getMonthlyIncomeForYear(userId, lastYear)).thenReturn(lastYearIncome);
 
+    // Act
     IncomeTrend trend = dashboardService.getIncomeTrend(userId);
 
-    assertEquals(months, trend.getMonths());
-    assertEquals(thisYearIncome, trend.getIncomeThisYear());
-    assertEquals(lastYearIncome, trend.getIncomeLastYear());
+    // Assert
+    assertEquals(months, trend.getMonths(), "Months should match");
+    assertEquals(expectedThisYearIncome, trend.getIncomeThisYear(), "Current year income should match");
+    assertEquals(expectedLastYearIncome, trend.getIncomeLastYear(), "Last year income should match");
   }
 
-  // TODO: Implement real tests where added
   @Test
-  void getSpendingInsights_shouldReturnPredefinedInsights() {
+  void getSpendingInsights_shouldReturnInsights() {
+    // Arrange
+    LocalDate endDate = LocalDate.now();
+    LocalDate startDate = endDate.minusDays(30);
+
+    Transaction t1 = new Transaction();
+    t1.setAmount(BigDecimal.valueOf(-50.00));
+    t1.setCategory("Food");
+    Transaction t2 = new Transaction();
+    t2.setAmount(BigDecimal.valueOf(-25.00));
+    t2.setCategory("Subscription");
+    List<Transaction> mockTransactions = Arrays.asList(t1, t2);
+
+    String transactionStats = "User's spending over the last 30 days:\n" +
+            "- Food: $50.00\n" +
+            "- Subscription: $25.00\n";
+    String rawInsights = "Insight 1: Consider shifting just 1 meal/week to home cooking, you could save $120/month while still enjoying the occasional treat!\n" +
+            "Insight 2: Bundling or pausing just 1–2 rarely used ones could save around $25–$40/month, with no major impact on your routine!";
+    List<SpendingInsight> expectedInsights = Arrays.asList(
+            new SpendingInsight("Consider shifting just 1 meal/week to home cooking, you could save $120/month while still enjoying the occasional treat!"),
+            new SpendingInsight("Bundling or pausing just 1–2 rarely used ones could save around $25–$40/month, with no major impact on your routine!")
+    );
+
+    when(transactionService.getTransactionsByUserIdInTimeFrame(userId, startDate, endDate)).thenReturn(mockTransactions);
+    when(aiInsightService.buildStrictPrompt(transactionStats)).thenReturn("mocked prompt");
+    when(aiInsightService.getInsightsFromText("mocked prompt")).thenReturn(rawInsights);
+    when(aiInsightService.parseInsightsToList(rawInsights)).thenReturn(expectedInsights);
+
+    // Act
     List<SpendingInsight> insights = dashboardService.getSpendingInsights(userId);
 
-    assertEquals(2, insights.size());
-    assertEquals(
-        "Consider shifting just 1 meal/week to home cooking, you could save $120/month while still enjoying the occasional treat!",
-        insights.get(0).getInsight());
-    assertEquals(
-        "Bundling or pausing just 1–2 rarely used ones could save around $25–$40/month, with no major impact on your routine!",
-        insights.get(1).getInsight());
+    // Assert
+    assertEquals(2, insights.size(), "Should return 2 insights");
+    assertEquals(expectedInsights.get(0).getInsight(), insights.get(0).getInsight(), "First insight should match");
+    assertEquals(expectedInsights.get(1).getInsight(), insights.get(1).getInsight(), "Second insight should match");
   }
 }
+
